MAJ swagger
